--- a/MapWinUtility/BASINS-MapWinUtility15.vbproj
+++ b/MapWinUtility/BASINS-MapWinUtility15.vbproj
@@ -4,7 +4,7 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{33E88992-742F-4D13-823F-35D6A07B1AA1}</ProjectGuid>
+    <ProjectGuid>{3C991AE4-9EDB-4C24-BAF3-42F7303D7DF3}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ApplicationIcon>
@@ -35,7 +35,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\..\BASINS40\bin\</OutputPath>
+    <OutputPath>..\..\BASINS\bin\</OutputPath>
     <DocumentationFile>MapWinUtility.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
@@ -54,7 +54,7 @@
     <DebugType>full</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\..\BASINS40\bin\</OutputPath>
+    <OutputPath>..\..\BASINS\bin\</OutputPath>
     <DocumentationFile>MapWinUtility.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
@@ -97,7 +97,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\..\BASINS40\bin\</OutputPath>
+    <OutputPath>..\..\BASINS\bin\</OutputPath>
     <BaseAddress>285212672</BaseAddress>
     <DocumentationFile>MapWinUtility.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
@@ -106,7 +106,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <OutputPath>bin\x86\Release\</OutputPath>
+    <OutputPath>..\..\BASINS\bin\</OutputPath>
     <BaseAddress>285212672</BaseAddress>
     <DocumentationFile>MapWinUtility.xml</DocumentationFile>
     <Optimize>true</Optimize>
