--- a/atcGraphExperimental/atcGraph15.vbproj
+++ b/atcGraphExperimental/atcGraph15.vbproj
@@ -88,6 +88,7 @@
     <Reference Include="System.Drawing">
       <Name>System.Drawing</Name>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms">
       <Name>System.Windows.Forms</Name>
     </Reference>
