--- a/atcBatchProcessing/atcBatchProcessing-DSC.vbproj
+++ b/atcBatchProcessing/atcBatchProcessing-DSC.vbproj
@@ -49,7 +49,7 @@
     <OutputPath>..\bin\Debug</OutputPath>
     <DocumentationFile>atcBatchProcessing.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
