--- a/atcD4EMLauncher/atcD4EMLauncher-DSC.vbproj
+++ b/atcD4EMLauncher/atcD4EMLauncher-DSC.vbproj
@@ -21,7 +21,7 @@
     <OutputPath>..\bin\Debug</OutputPath>
     <DocumentationFile>atcD4EMLauncher.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
     <DefineConstants>GISProvider="DotSpatial"</DefineConstants>
   </PropertyGroup>
