--- a/atcUSGSBaseflow/atcUSGSBaseflow-DSC.vbproj
+++ b/atcUSGSBaseflow/atcUSGSBaseflow-DSC.vbproj
@@ -46,7 +46,7 @@
     <OutputPath>..\bin\Debug</OutputPath>
     <DocumentationFile>atcUSGSBaseflow.xml</DocumentationFile>
     <NoWarn>41999,42016,42017,42018,42019,42032,42036,42353,42354,42355</NoWarn>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DefineConstants>GISProvider = "DotSpatial"</DefineConstants>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
