--- a/USGSHydroToolboxDS/USGSHydroToolboxDS.csproj
+++ b/USGSHydroToolboxDS/USGSHydroToolboxDS.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>USGSHydroToolbox</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
   </PropertyGroup>
